# py-deprecate

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_deprecate/: __init__.py
tests/: test_deprecate.py  test_import.py
