[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-deprecate"
version = "0.2.0"
description = "Decorator and utilities for deprecating functions, parameters, and classes with zero boilerplate"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["deprecate", "deprecated", "warning", "decorator", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-deprecate#readme"
Repository = "https://github.com/philiprehberger/py-deprecate"
Issues = "https://github.com/philiprehberger/py-deprecate/issues"
Changelog = "https://github.com/philiprehberger/py-deprecate/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_deprecate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
